--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.76.9",
     "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "expo-camera": "~16.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
