--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~52.0.46",
     "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
@@ -18,9 +19,11 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-maps": "1.18.0",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "expo-camera": "~16.0.18"
+    "react-native-svg": "15.8.0",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
