--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~52.0.46",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.0.18",
@@ -22,12 +23,12 @@
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "expo-module-scripts": "^4.1.6",
     "typescript": "^5.3.3"
   },
   "private": true
