--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "^2.11.0",
     "expo": "~52.0.46",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.0.18",
