--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.21",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^12.1.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-maps": "1.18.0",
